- Fix bug #37630: MySQL extensions should link against thread safe client libs if built with ZTS